fixup 💄 Added missing border in footer form label

--- a/grav/user/themes/annekesinnema/scss/basics/_forms.scss
+++ b/grav/user/themes/annekesinnema/scss/basics/_forms.scss
@@ -109,6 +109,10 @@ textarea {
     }
 }
 
+.form-field--checkboxes {
+    border-left: 1px solid $pink;
+}
+
 .checkbox-grouplabel {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
@@ -119,7 +123,6 @@ textarea {
 
     @media screen and (min-width: $tiny-screen) {
         padding: ($rhythmrem / 2);
-        border-left: 1px solid $pink;
     }
 }
 
